<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:context=".SendImageActivity">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical"

        android:gravity="center_horizontal"
        android:background="@drawable/hint_background"

        tools:context=".ImageActivity">

        <TextView
            android:padding="5dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@drawable/hint"
            android:text="@string/hint_sending"
            android:gravity="left"
            android:textAlignment="gravity"
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



    <ImageView
        android:id="@+id/image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_image"
        android:foreground="@drawable/foreground"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"

        android:layout_margin="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/retry_btn"
        android:text="@string/retry"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/change_image_btn"
        android:text="@string/change_image"

        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/text_button"
        android:alpha="0.5"

        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/result_btn"
        android:text="@string/result"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>