<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:context=".ImageActivity">


    <LinearLayout
        android:id="@+id/hint"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/hint_bg_new"
        tools:context=".ResultActivity"

        android:layout_marginBottom="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="20sp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:background="@drawable/hint"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_sending"
                android:gravity="left"
                android:textSize="16sp"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_image"
        android:foreground="@drawable/foreground"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"

        android:layout_margin="10dp" />

    <ProgressBar
        android:id="@+id/loading_image_spinner"
        android:indeterminateDrawable="@drawable/progress_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/change_image_btn"
        android:text="@string/change_image"

        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/text_button"
        android:alpha="0.5"

        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/result_btn"
        android:text="@string/result"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>